se agregan ultimas funcionalidades y vistas de la pagina y modularizacion de codigo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,6 +3,11 @@
   background-color: darkgray;
 }
 
+#categories-products > li:hover{
+  background-color: blueviolet;
+}
+
+
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
